cmake_minimum_required(VERSION 3.10..3.31)
project(raylib-bouncy)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/../build)
include_directories(${CMAKE_SOURCE_DIR}/../include)
link_directories(${CMAKE_SOURCE_DIR}/../lib)
add_executable(raylib-bouncy main.cpp)
target_link_libraries(raylib-bouncy raylib)
